# yogabook1-halo-keyboard

./: CMakeLists.txt  README.md  binds.fish  color.cpp  ctrlword.map  emit_keys.cpp  entry.cpp  execute_command.cpp  fn_keymods.c  halo_vkbd.service  libmod.cpp  log.cpp  map_reader.cpp  yogabook1.map
include/: ckeyid.h  color.h  emit_keys.h  execute_command.h  key_id.h  libmod.h  log.hpp  map_reader.h
